added other nanogui examples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,5 +78,9 @@ target_link_libraries(${PROJECT_NAME}3 ${EXTRA_LIBS})
 add_executable("${PROJECT_NAME}4" "src/${PROJECT_NAME}4.cpp")
 target_link_libraries(${PROJECT_NAME}4 ${CONAN_LIBS})
 target_link_libraries(${PROJECT_NAME}4 ${EXTRA_LIBS})
+
+add_executable("${PROJECT_NAME}_icons" "src/${PROJECT_NAME}_icons.cpp")
+target_link_libraries(${PROJECT_NAME}_icons ${CONAN_LIBS})
+target_link_libraries(${PROJECT_NAME}_icons ${EXTRA_LIBS})
 # target_link_libraries(main ${CONAN_LIBS})
 set(CMAKE_BUILD_TYPE Release)
